src/qt/libqurl.bf

extension CQt
{
	[LinkName("QUrl_new")]
	public static extern void* QUrl_new();
	[LinkName("QUrl_new2")]
	public static extern void* QUrl_new2(void* copyVal);
	[LinkName("QUrl_new3")]
	public static extern void* QUrl_new3(libqt_string url);
	[LinkName("QUrl_new4")]
	public static extern void* QUrl_new4(libqt_string url, int64 mode);
	[LinkName("QUrl_OperatorAssign")]
	public static extern void QUrl_OperatorAssign(void* c_this, void* copyVal);
	[LinkName("QUrl_OperatorAssignWithUrl")]
	public static extern void QUrl_OperatorAssignWithUrl(void* c_this, libqt_string url);
	[LinkName("QUrl_Swap")]
	public static extern void QUrl_Swap(void* c_this, void* other);
	[LinkName("QUrl_SetUrl")]
	public static extern void QUrl_SetUrl(void* c_this, libqt_string url);
	[LinkName("QUrl_Url")]
	public static extern libqt_string QUrl_Url(void* c_this);
	[LinkName("QUrl_ToString")]
	public static extern libqt_string QUrl_ToString(void* c_this);
	[LinkName("QUrl_ToDisplayString")]
	public static extern libqt_string QUrl_ToDisplayString(void* c_this);
	[LinkName("QUrl_ToEncoded")]
	public static extern libqt_string QUrl_ToEncoded(void* c_this);
	[LinkName("QUrl_FromEncoded")]
	public static extern void QUrl_FromEncoded(libqt_string url);
	[LinkName("QUrl_FromUserInput")]
	public static extern void QUrl_FromUserInput(libqt_string userInput);
	[LinkName("QUrl_IsValid")]
	public static extern bool QUrl_IsValid(void* c_this);
	[LinkName("QUrl_ErrorString")]
	public static extern libqt_string QUrl_ErrorString(void* c_this);
	[LinkName("QUrl_IsEmpty")]
	public static extern bool QUrl_IsEmpty(void* c_this);
	[LinkName("QUrl_Clear")]
	public static extern void QUrl_Clear(void* c_this);
	[LinkName("QUrl_SetScheme")]
	public static extern void QUrl_SetScheme(void* c_this, libqt_string scheme);
	[LinkName("QUrl_Scheme")]
	public static extern libqt_string QUrl_Scheme(void* c_this);
	[LinkName("QUrl_SetAuthority")]
	public static extern void QUrl_SetAuthority(void* c_this, libqt_string authority);
	[LinkName("QUrl_Authority")]
	public static extern libqt_string QUrl_Authority(void* c_this);
	[LinkName("QUrl_SetUserInfo")]
	public static extern void QUrl_SetUserInfo(void* c_this, libqt_string userInfo);
	[LinkName("QUrl_UserInfo")]
	public static extern libqt_string QUrl_UserInfo(void* c_this);
	[LinkName("QUrl_SetUserName")]
	public static extern void QUrl_SetUserName(void* c_this, libqt_string userName);
	[LinkName("QUrl_UserName")]
	public static extern libqt_string QUrl_UserName(void* c_this);
	[LinkName("QUrl_SetPassword")]
	public static extern void QUrl_SetPassword(void* c_this, libqt_string password);
	[LinkName("QUrl_Password")]
	public static extern libqt_string QUrl_Password(void* c_this);
	[LinkName("QUrl_SetHost")]
	public static extern void QUrl_SetHost(void* c_this, libqt_string host);
	[LinkName("QUrl_Host")]
	public static extern libqt_string QUrl_Host(void* c_this);
	[LinkName("QUrl_SetPort")]
	public static extern void QUrl_SetPort(void* c_this, int32 port);
	[LinkName("QUrl_Port")]
	public static extern int32 QUrl_Port(void* c_this);
	[LinkName("QUrl_SetPath")]
	public static extern void QUrl_SetPath(void* c_this, libqt_string path);
	[LinkName("QUrl_Path")]
	public static extern libqt_string QUrl_Path(void* c_this);
	[LinkName("QUrl_FileName")]
	public static extern libqt_string QUrl_FileName(void* c_this);
	[LinkName("QUrl_HasQuery")]
	public static extern bool QUrl_HasQuery(void* c_this);
	[LinkName("QUrl_SetQuery")]
	public static extern void QUrl_SetQuery(void* c_this, libqt_string query);
	[LinkName("QUrl_SetQueryWithQuery")]
	public static extern void QUrl_SetQueryWithQuery(void* c_this, void* query);
	[LinkName("QUrl_Query")]
	public static extern libqt_string QUrl_Query(void* c_this);
	[LinkName("QUrl_HasFragment")]
	public static extern bool QUrl_HasFragment(void* c_this);
	[LinkName("QUrl_Fragment")]
	public static extern libqt_string QUrl_Fragment(void* c_this);
	[LinkName("QUrl_SetFragment")]
	public static extern void QUrl_SetFragment(void* c_this, libqt_string fragment);
	[LinkName("QUrl_Resolved")]
	public static extern void QUrl_Resolved(void* c_this, void* relative);
	[LinkName("QUrl_IsRelative")]
	public static extern bool QUrl_IsRelative(void* c_this);
	[LinkName("QUrl_IsParentOf")]
	public static extern bool QUrl_IsParentOf(void* c_this, void* url);
	[LinkName("QUrl_IsLocalFile")]
	public static extern bool QUrl_IsLocalFile(void* c_this);
	[LinkName("QUrl_FromLocalFile")]
	public static extern void QUrl_FromLocalFile(libqt_string localfile);
	[LinkName("QUrl_ToLocalFile")]
	public static extern libqt_string QUrl_ToLocalFile(void* c_this);
	[LinkName("QUrl_Detach")]
	public static extern void QUrl_Detach(void* c_this);
	[LinkName("QUrl_IsDetached")]
	public static extern bool QUrl_IsDetached(void* c_this);
	[LinkName("QUrl_OperatorLesser")]
	public static extern bool QUrl_OperatorLesser(void* c_this, void* url);
	[LinkName("QUrl_OperatorEqual")]
	public static extern bool QUrl_OperatorEqual(void* c_this, void* url);
	[LinkName("QUrl_OperatorNotEqual")]
	public static extern bool QUrl_OperatorNotEqual(void* c_this, void* url);
	[LinkName("QUrl_FromPercentEncoding")]
	public static extern libqt_string QUrl_FromPercentEncoding(libqt_string param1);
	[LinkName("QUrl_ToPercentEncoding")]
	public static extern libqt_string QUrl_ToPercentEncoding(libqt_string param1);
	[LinkName("QUrl_FromAce")]
	public static extern libqt_string QUrl_FromAce(libqt_string domain);
	[LinkName("QUrl_ToAce")]
	public static extern libqt_string QUrl_ToAce(libqt_string domain);
	[LinkName("QUrl_IdnWhitelist")]
	public static extern libqt_string[] QUrl_IdnWhitelist();
	[LinkName("QUrl_ToStringList")]
	public static extern libqt_string[] QUrl_ToStringList(void[] uris);
	[LinkName("QUrl_FromStringList")]
	public static extern void[] QUrl_FromStringList(libqt_string[] uris);
	[LinkName("QUrl_SetIdnWhitelist")]
	public static extern void QUrl_SetIdnWhitelist(libqt_string[] idnWhitelist);
	[LinkName("QUrl_SetUrl2")]
	public static extern void QUrl_SetUrl2(void* c_this, libqt_string url, int64 mode);
	[LinkName("QUrl_FromEncoded2")]
	public static extern void QUrl_FromEncoded2(libqt_string url, int64 mode);
	[LinkName("QUrl_FromUserInput2")]
	public static extern void QUrl_FromUserInput2(libqt_string userInput, libqt_string workingDirectory);
	[LinkName("QUrl_FromUserInput3")]
	public static extern void QUrl_FromUserInput3(libqt_string userInput, libqt_string workingDirectory, int64 options);
	[LinkName("QUrl_SetAuthority2")]
	public static extern void QUrl_SetAuthority2(void* c_this, libqt_string authority, int64 mode);
	[LinkName("QUrl_Authority1")]
	public static extern libqt_string QUrl_Authority1(void* c_this, int64 options);
	[LinkName("QUrl_SetUserInfo2")]
	public static extern void QUrl_SetUserInfo2(void* c_this, libqt_string userInfo, int64 mode);
	[LinkName("QUrl_UserInfo1")]
	public static extern libqt_string QUrl_UserInfo1(void* c_this, int64 options);
	[LinkName("QUrl_SetUserName2")]
	public static extern void QUrl_SetUserName2(void* c_this, libqt_string userName, int64 mode);
	[LinkName("QUrl_UserName1")]
	public static extern libqt_string QUrl_UserName1(void* c_this, int64 options);
	[LinkName("QUrl_SetPassword2")]
	public static extern void QUrl_SetPassword2(void* c_this, libqt_string password, int64 mode);
	[LinkName("QUrl_Password1")]
	public static extern libqt_string QUrl_Password1(void* c_this, int64 param1);
	[LinkName("QUrl_SetHost2")]
	public static extern void QUrl_SetHost2(void* c_this, libqt_string host, int64 mode);
	[LinkName("QUrl_Host1")]
	public static extern libqt_string QUrl_Host1(void* c_this, int64 param1);
	[LinkName("QUrl_Port1")]
	public static extern int32 QUrl_Port1(void* c_this, int32 defaultPort);
	[LinkName("QUrl_SetPath2")]
	public static extern void QUrl_SetPath2(void* c_this, libqt_string path, int64 mode);
	[LinkName("QUrl_Path1")]
	public static extern libqt_string QUrl_Path1(void* c_this, int64 options);
	[LinkName("QUrl_FileName1")]
	public static extern libqt_string QUrl_FileName1(void* c_this, int64 options);
	[LinkName("QUrl_SetQuery2")]
	public static extern void QUrl_SetQuery2(void* c_this, libqt_string query, int64 mode);
	[LinkName("QUrl_Query1")]
	public static extern libqt_string QUrl_Query1(void* c_this, int64 param1);
	[LinkName("QUrl_Fragment1")]
	public static extern libqt_string QUrl_Fragment1(void* c_this, int64 options);
	[LinkName("QUrl_SetFragment2")]
	public static extern void QUrl_SetFragment2(void* c_this, libqt_string fragment, int64 mode);
	[LinkName("QUrl_ToPercentEncoding2")]
	public static extern libqt_string QUrl_ToPercentEncoding2(libqt_string param1, libqt_string exclude);
	[LinkName("QUrl_ToPercentEncoding3")]
	public static extern libqt_string QUrl_ToPercentEncoding3(libqt_string param1, libqt_string exclude, libqt_string include);
	[LinkName("QUrl_FromAce2")]
	public static extern libqt_string QUrl_FromAce2(libqt_string domain, int64 options);
	[LinkName("QUrl_ToAce2")]
	public static extern libqt_string QUrl_ToAce2(libqt_string domain, int64 options);
	[LinkName("QUrl_FromStringList2")]
	public static extern void[] QUrl_FromStringList2(libqt_string[] uris, int64 mode);
	/// Delete this object from C++ memory
	[LinkName("QUrl_Delete")]
	public static extern void QUrl_Delete(void* self);
}